; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_destroy_all_cipher_methods.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_destroy_all_cipher_methods.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32* }

@cipher_data = common dso_local global %struct.TYPE_5__* null, align 8
@cipher_driver_info = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @destroy_all_cipher_methods to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_all_cipher_methods() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %24, %0
  %3 = load i64, i64* %1, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_data, align 8
  %5 = call i64 @OSSL_NELEM(%struct.TYPE_5__* %4)
  %6 = icmp ult i64 %3, %5
  br i1 %6, label %7, label %27

7:                                                ; preds = %2
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_data, align 8
  %9 = load i64, i64* %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @destroy_cipher_method(i32 %12)
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** @cipher_driver_info, align 8
  %15 = load i64, i64* %1, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @OPENSSL_free(i32* %18)
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** @cipher_driver_info, align 8
  %21 = load i64, i64* %1, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32* null, i32** %23, align 8
  br label %24

24:                                               ; preds = %7
  %25 = load i64, i64* %1, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %1, align 8
  br label %2

27:                                               ; preds = %2
  ret void
}

declare dso_local i64 @OSSL_NELEM(%struct.TYPE_5__*) #1

declare dso_local i32 @destroy_cipher_method(i32) #1

declare dso_local i32 @OPENSSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
